update:關注清單表頭文字調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_EtfList.cshtml
@@ -90,7 +90,7 @@
                         </th>
                         <th >
                             <div class="c-table__title">
-                                <span>收盤價/<br>漲跌幅通知</span>
+                                <span>到價通知設定</span>
                             </div>
                         </th>
                         <th>
@@ -186,7 +186,7 @@
                         </div>
                     </td>
                     <td class="c-cardTable__body c-cardTable__body--line" data-card-table-width="1/1" >
-                        <div class="c-cardTable__title" data-length="5">收盤價/<br>漲跌幅通知</div>
+                        <div class="c-cardTable__title" data-length="5">到價通知設定</div>
                             <div class="c-cardTable__content" data-infostatus="<% if  (Info != null && Info.ReachValueOpen || Info != null && Info.QuoteChangeOpen){%><%= 'true' %><% } else {%><%= 'false' %> <%}%>">
                                <% if (Info  == null　|| (!Info.ReachValueOpen && !Info.QuoteChangeOpen) ) { %>
                             <div class="t-tip--lt">點鈴鐺設定到價通知</div>
