update:基金詳細頁同類排行底線被遮蔽fix

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -23,6 +23,11 @@
     var searchUrl = FundRelatedSettingModel.GetFundSearchUrl();
     string pageId = @Sitecore.Context.Item.ID.ToString();
 }
+<style>
+    .c-swiper--3rows.is-paginationless, .c-swiper--minor.is-paginationless {
+        padding-bottom: 1px;
+    }
+</style>
 
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
