update: 關注清單 國外股票關注數量fix

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -652,7 +652,7 @@
                         window.OrderColumn('foreignBondListTable', 'UpsAndDownsMonth', 'is-desc', true);
                         $('.c-loading').loading('hide');
                     } else {
-                        $('[id="foreignStockTrackTotal"]').text(0);
+                        $('[id="foreignBondTrackTotal"]').text(0);
                         $('[data-focusforeignBond]').addClass('u-hidden');
                         $('[data-nofocusforeignBond]').removeClass('u-hidden');
                         $('.c-loading').loading('hide');
