update: 調整ileo deeplink多encode [=]

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -678,7 +678,7 @@
                     continue;
                 }
                 if (key == "channel") {
-                    loginUrl += `${key}=${encodeURIComponent(value + '&')}`;
+                    loginUrl += `${key}${encodeURIComponent('='+ value + '&')}`;
                     continue;
                 }
                 if (key == "returnUrl") {
