update: 調整ileo deeplink 最後=換成%3D

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -691,6 +691,8 @@
                     loginUrl += `${key}=${value}&`;
                 }
             }
+            //模擬編碼，因channel參數是在link參數裡
+            loginUrl = loginUrl.replace('channel=', 'channel%3D');
             self.setAttribute('href', loginUrl);
         });
 
