語系調整 zh-hant-tw => zh-hant

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/Oauth/Oauth.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Foundation.Wealth.Helper;
-<html lang="zh-Hant-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
