語系調整 zh-hant => zh-TW
相關工作項目: #4948

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -2,7 +2,7 @@
 @using Xcms.Sitecore.Foundation.Assets.Models
 @using Xcms.Sitecore.Foundation.Assets.Services
 <!DOCTYPE html>
-<html class="no-js" lang="zh-Hant">
+<html class="no-js" lang="zh-TW">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
