Update:移除進入試算頁面就打API抓風險屬性、修改已準備金額文案

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -1615,15 +1615,6 @@
                 if (SC_DATA.IsLoggedIn) {
                     $('[data-save="true"]').removeClass('u-hidden');
 
-                    if (SC_DATA.Risk === undefined) {
-                        try {
-                            const data = await RiskHandler();
-                            SC_DATA.Risk = data.risk;
-                        } catch (error) {
-                            console.error('Error fetching risk data:', error);
-                        }
-                    }
-
                     if (SC_DATA.Risk !== undefined && SC_DATA.PlatForm === 'WebBank') {
                         UpdateRiskAttributesContent(SC_DATA.Risk);
                     } else if (SC_DATA.Risk === undefined && SC_DATA.PlatForm === 'WebBank') {
@@ -3206,7 +3197,7 @@
                                 y: item.invest,
                                 color: '#86BDDD'
                             }, {
-                                name: '已準備金',
+                                name: '已準備金額',
                                 y: item.prepared,
                                 color: '#FFAD04'
                             }]
@@ -3258,7 +3249,7 @@
             }
             //#endregion
 
-            //#region 取得長條圖已準備金資料
+            //#region 取得長條圖已準備金額資料
             function getRewardsPreparedData(amountPrepared, years) {
                 let data = [];
 
@@ -3421,7 +3412,7 @@
                             data: item.invest,
                             color: '#86BDDD'
                         }, {
-                            name: "已準備金",
+                            name: "已準備金額",
                             data: item.prepared,
                             color: '#FFAD04'
                         }]
