--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -434,7 +434,7 @@
                                     y: item.invest,
                                     color: '#86BDDD'
                                 }, {
-                                    name: '已準備金',
+                                    name: '已準備金額',
                                     y: item.prepared,
                                     color: '#FFAD04'
                                 }]
@@ -522,7 +522,7 @@
                                     y: item.retire,
                                     color: '#238C6C'
                                 }, {
-                                    name: '已準備金',
+                                    name: '已準備金額',
                                     y: item.prepared,
                                     color: '#FFAD04'
                                 }]
@@ -678,7 +678,7 @@
                                 data: item.invest,
                                 color: '#86BDDD'
                             }, {
-                                name: "已準備金",
+                                name: "已準備金額",
                                 data: item.prepared,
                                 color: '#FFAD04'
                             }]
@@ -834,7 +834,7 @@
                                 data: item.retire,
                                 color: '#238C6C'
                             }, {
-                                name: "已準備金",
+                                name: "已準備金額",
                                 data: item.prepared,
                                 color: '#FFAD04'
                             }]
