--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
@@ -1595,15 +1595,6 @@
                 if (SC_DATA.IsLoggedIn) {
                     $('[data-save="true"]').removeClass('u-hidden');
 
-                    if (SC_DATA.Risk === undefined) {
-                        try {
-                            const data = await RiskHandler();
-                            SC_DATA.Risk = data.risk;
-                        } catch (error) {
-                            console.error('Error fetching risk data:', error);
-                        }
-                    }
-
                     if (SC_DATA.Risk !== undefined && SC_DATA.PlatForm === 'WebBank') {
                         UpdateRiskAttributesContent(SC_DATA.Risk);
                     } else if (SC_DATA.Risk === undefined && SC_DATA.PlatForm === 'WebBank') {
@@ -2678,7 +2669,7 @@
                     revenue: total - invest - prepared,
                     // 累積每月投入
                     invest: invest,
-                    // 已準備金
+                    // 已準備金額
                     prepared: prepared
                 });
 
@@ -3190,7 +3181,7 @@
                                 y: item.invest,
                                 color: '#86BDDD'
                             }, {
-                                name: '已準備金',
+                                name: '已準備金額',
                                 y: item.prepared,
                                 color: '#FFAD04'
                             }]
@@ -3242,7 +3233,7 @@
             }
             //#endregion
 
-            //#region 取得長條圖已準備金資料
+            //#region 取得長條圖已準備金額資料
             function getRewardsPreparedData(Prepared, Years) {
                 let data = [];
 
@@ -3405,7 +3396,7 @@
                             data: item.invest,
                             color: '#86BDDD'
                         }, {
-                            name: "已準備金",
+                            name: "已準備金額",
                             data: item.prepared,
                             color: '#FFAD04'
                         }]
